# icarus

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  database.py  drone_controller.py  pathfinder.py  settings.py
drone/: drone_connection.py  drone_sitl_flight.py
