[tool.poetry]
name = "icarus"
version = "0.1.0"
description = ""
authors = ["adenmengistie <adensm@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
networkx = "^3.2.1"
rethinkdb = "^2.4.10.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
