[tool.poetry]
name = "icarus"
version = "0.1.0"
description = ""
authors = ["adenmengistie <adensm@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.110.0"}
networkx = "^3.2.1"
rethinkdb = "^2.4.10.post1"
dronekit-sitl = "^3.3.0"
dronekit = "^2.9.2"
gnureadline = "^8.1.2"
mavproxy = "^1.8.70"
pymavlink = "^2.4.41"
opencv-python = "^4.9.0.80"
wxpython = "^4.2.1"
billiard = "^4.2.0"
numpy = "^1.26.4"
pyparsing = "^3.1.2"
matplotlib = "^3.8.4"
geopy = "^2.4.1"
filelock = "^3.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
